References #4 | Better connection log

--- a/views/partials/room/connectionEntry.ejs
+++ b/views/partials/room/connectionEntry.ejs
@@ -1,5 +1,8 @@
 <div>
   <em>
-    <%= connection.user %> arrived at <%= connection.timestamp %>.
+    <%= connection.user %>
+    <%= connection.inRoom === true ? 'arrived' : 'left' %>
+    at
+    <%= connection.timestamp %>.
   </em>
 </div>
