--- a/views/partials/roomDetail/messageEntry.ejs
+++ b/views/partials/roomDetail/messageEntry.ejs
@@ -1,7 +1,7 @@
 <div>
   <p>
     <span>
-      <%= entry.author %>
+      <%- entry.author %>
     </span>
     <br>
     <span>
@@ -11,6 +11,6 @@
 </div>
 <div>
   <p>
-    <%= entry.content %>
+    <%- entry.content %>
   </p>
 </div>
